# learn-svgrouting

./: .gitignore  Dockerfile.postgres  README.md  docker-compose.yml  label-svg.ipynb  map-server.py  postgis-mapserver.ipynb  pyproject.toml  route-extractor.ipynb
openlayers-app/: .gitignore  index.html  main.js  package-lock.json  package.json  style.css
openlayers-app/data/: desks.js  floors.js  obstacles.js  rooms.js
